[tool.poetry]
name="knit"
version = "0.4.0"
description = "A quick package to tangle your Org-mode files"
authors = []
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
mypy = "^0.961"
pytest = "^7.1.2"
flake8 = "^4.0.1"
tox = "^3.25.0"
pre-commit = "^2.19.0"
isort = "^5.10.1"
hypothesis = "^6.48.1"
pytest-cov = "^3.0.0"
codecov = "^2.1.12"
black = {version = "^22.6.0", allow-prereleases = true}
bandit = "^1.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length=79
skip-string-normalization = true
target-version=['py39']
preview = true
exclude = '''
/(
    /.git
  | /.mypy_cache
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
